--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,9 +23,8 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#!">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">Nosotros</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="#!" id="mostrar_carrito">Carrito</a></li>
-                    <input type="text"  id="buscador">
-                    <button id="buscar">Buscar</button>
+                    <li class="nav-item" id="mostrar_carrito"><a class="bi bi-cart3 carrito"></a></li>
+                    
                 </ul>
             </div>
         </div>
@@ -65,7 +65,7 @@
     
 
 
-   
     <script src="./js/main.js"></script>
+   
 </body>
 </html>
