--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#!">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contenedor-productos">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">Nosotros</a></li>
                     <li class="nav-item" id="mostrar_carrito"><a class="bi bi-cart3 carrito"></a></li>
                     
